welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: not found: value getPos
while (getPos() != (14, 0)) {
       ^