welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (getPos() != (14, 0)) {
  if (estFaceMur()) {
    gauche()
    avance()
    droite()
    avance()
  } else {
    avance()
  }
}